Fixed bug #70108 sometimes empty $_SERVER['QUERY_STRING']

auto_globals_jit is the reason every thread needs a copy. Otherwise
every thread will operate on the master values which can't end good.